resources/sass/support-us/_image-gallery.scss
.image-gallery {
  background-color: #F4F3F0;
  padding: 50px 0;
  text-align: center;
  h2 {
    font-size: 26px;
    font-weight: 600;
    margin: 0;
    padding: 0 0 22px;
  }
  .splide {
    margin: 0 auto;
    max-width: 1290px;
    width: 100%;
  }

  .splide__slide,
  .splide__slide figure {
    transition: .4s all;
  }
  .splide__slide:not(.is-active) figure {
    @media (min-width: 600px) {
      opacity: .2;
      transform: scale(.8);
      transform-origin: top;
    }
  }

  .splide__slide:not(.is-active) figcaption {
    opacity: 0;
  }

  figure {
    margin: 0;
    img {
      height: 100%;
      object-fit: contain;
      width: 100%;
    }
  }

  figcaption {
    display: block;
    padding-top: 16px;
  }
}

.image-gallery .collection-carousel button.splide__arrow {
  border-radius: 0;
  svg {
    height: auto;
    width: auto;
  }
}

.image-gallery .collection-carousel button.carousel-control-prev {
  @media (min-width: 600px) {
    left: -9px;
  }
}
.image-gallery .collection-carousel button.carousel-control-next {
  @media (min-width: 600px) {
    right: -9px;
  }
}

